// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputAccount 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          00000.810.0.000001_____
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        placeholder="_____.___._.___________"
        value="00000.810.0.000001"
      />
    </div>
  </div>
</label>
`;

exports[`InputCard 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          1234 1234 12__ ____
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        placeholder="____ ____ ____ ____"
        value="1234 1234 12"
      />
    </div>
  </div>
</label>
`;

exports[`InputDate /w datetime 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          22.02.1988 21:00
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="22.02.1988 21:00"
      />
    </div>
  </div>
</label>
`;

exports[`InputDate /w new Date 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          22.02.1988
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="22.02.1988"
      />
    </div>
  </div>
</label>
`;

exports[`InputDate /w not in range 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          17.06.2000
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="17.06.2000"
      />
    </div>
  </div>
</label>
`;

exports[`InputDate /w time 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          21:00
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="21:00"
      />
    </div>
  </div>
</label>
`;

exports[`InputDate 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          22.02.1988
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="22.02.1988"
      />
    </div>
  </div>
</label>
`;

exports[`InputDateRange /w not in range 1`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            01.06.2000 - 14.06.2000
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="01.06.2000 - 14.06.2000"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange 1`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ design 1`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ design 2`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 lkLMMk"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 hEzoQJ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 dyFbgS"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ size 1`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 gPunPw"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 jNacye"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 hbWobN"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ size 2`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 eablnU"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ size 3`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 hmYQOg"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ size 4`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDateRange w/ size 5`] = `
<div
  class="InputDateRangestyles__Box-z67vxn-0 dsxpIC"
>
  <label
    class="Inputstyles__Wrapper-hc8ttv-6 dcSDdd"
  >
    <div
      class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
    >
      <div
        class="Inputstyles__Box-hc8ttv-1 bzkyqR"
      >
        <div
          class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
        >
          <div
            class="Inputstyles__Placeholder-hc8ttv-0 xqPUL"
          >
            12.02.1930 - 22.0М.ГГГГ
          </div>
        </div>
        <input
          aria-invalid="false"
          class="Inputstyles__StyledInput-hc8ttv-2 QjOJw"
          value="12.02.1930 - 22.0"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`InputDigital /w scale = 2 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="10.10"
      />
    </div>
  </div>
</label>
`;

exports[`InputDigital 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="10.10"
      />
    </div>
  </div>
</label>
`;

exports[`InputDigital scale = 0 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="10.10"
      />
    </div>
  </div>
</label>
`;

exports[`InputMask 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value=""
      />
    </div>
  </div>
</label>
`;

exports[`InputNumber 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="1000000"
      />
    </div>
  </div>
</label>
`;

exports[`InputPhone /w completed 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <div
        class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
      >
        <div
          class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
        >
          +7 (495) 919-12-42
        </div>
      </div>
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="4959191242"
      />
    </div>
  </div>
</label>
`;

exports[`InputPhone /w focused 1`] = `
<InputPhone
  value=""
>
  <InputMask
    design="outline"
    mask="+{7} (000) 000-00-00"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onPaste={[Function]}
    placeholderChar="_"
    size="l"
    smartPlaceholder="+7 (___) ___-__-__"
    value="+7 ("
  >
    <Input
      design="outline"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPaste={[Function]}
      onUpdated={[Function]}
      size="l"
      smartPlaceholder="+7 (___) ___-__-__"
      value="+7 ("
    >
      <InputWrapper
        active={true}
        design="outline"
        size="l"
      >
        <Inputstyles__Wrapper
          active={true}
          design="outline"
          size="l"
        >
          <label
            className="Inputstyles__Wrapper-hc8ttv-6 KDCUj"
            size="l"
          >
            <Inputstyles__Wrapped>
              <div
                className="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
              >
                <NativeInput
                  aria-invalid={false}
                  design="outline"
                  key=".1"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onPaste={[Function]}
                  onUpdated={[Function]}
                  size="l"
                  smartPlaceholder="+7 (___) ___-__-__"
                  value="+7 ("
                >
                  <Inputstyles__Box>
                    <div
                      className="Inputstyles__Box-hc8ttv-1 bzkyqR"
                    >
                      <Inputstyles__PlaceholderWrapper>
                        <div
                          className="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
                        >
                          <Inputstyles__Placeholder
                            design="outline"
                            size="l"
                          >
                            <div
                              className="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
                              size="l"
                            >
                              <Inputstyles__Invisible>
                                <span
                                  className="Inputstyles__Invisible-hc8ttv-8 bCdWvB"
                                >
                                  +7 (
                                </span>
                              </Inputstyles__Invisible>
                              <span>
                                ___) ___-__-__
                              </span>
                            </div>
                          </Inputstyles__Placeholder>
                        </div>
                      </Inputstyles__PlaceholderWrapper>
                      <Inputstyles__StyledInput
                        aria-invalid={false}
                        design="outline"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onPaste={[Function]}
                        onScroll={[Function]}
                        size="l"
                        value="+7 ("
                      >
                        <input
                          aria-invalid={false}
                          className="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onPaste={[Function]}
                          onScroll={[Function]}
                          size="l"
                          value="+7 ("
                        />
                      </Inputstyles__StyledInput>
                    </div>
                  </Inputstyles__Box>
                </NativeInput>
              </div>
            </Inputstyles__Wrapped>
          </label>
        </Inputstyles__Wrapper>
      </InputWrapper>
    </Input>
  </InputMask>
</InputPhone>
`;

exports[`InputPhone /w not complete 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="4953"
      />
    </div>
  </div>
</label>
`;

exports[`InputPhone 1`] = `
<label
  class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
>
  <div
    class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
  >
    <div
      class="Inputstyles__Box-hc8ttv-1 bzkyqR"
    >
      <input
        aria-invalid="false"
        class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
        value="+7 ("
      />
    </div>
  </div>
</label>
`;
